
classDiagram
    class SchedulerApp {
        -Flask app
        +run()
    }
    class Event {
        -id: int
        -title: str
        -description: str
        -start_time: datetime
        -end_time: datetime
        +__init__(title, description, start_time, end_time)
    }
    class EventDAO {
        +add_event(event: Event)
        -delete_event(event_id: int)
        +get_events_for_day(day: datetime) list
        +update_event(event_id: int, event: Event)
    }
    class Reminder {
        -id: int
        -event_id: int
        -send_time: datetime
        +__init__(event_id, send_time)
    }
    class ReminderService {
        +schedule_reminder(reminder: Reminder)
        -cancel_reminder(reminder_id: int)
    }
    SchedulerApp --> Event
    SchedulerApp --> EventDAO
    SchedulerApp --> Reminder
    SchedulerApp --> ReminderService
